[project]
name = "life-store"
version = "0.1.0"
description = "A collection of minimal, independent apps for life stuff that will grow over time"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio[mcp]>=6.19.0",
    "jsonschema>=4.26.0",
    "numpy>=2.4.6",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "tabulate>=0.10.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
